--- a/assets/ui/EventualSkillsTraining.ui
+++ b/assets/ui/EventualSkillsTraining.ui
@@ -6,10 +6,13 @@
     "contents": [
       {
         "type": "RelativeLayout",
+
         "contents": [
           {
             "type": "UIBox",
             "layoutInfo": {
+            "width": 550,
+             "height": 500,
               "position-top": {
                 "target": "TOP",
                 "widget": "mainContent",
@@ -35,10 +38,11 @@
           {
             "type": "MigLayout",
             "id": "mainContent",
-            "colConstraints": "[100::200][10::200][min!]",
             "layoutInfo": {
-              "use-content-width": true,
-              "use-content-height": true,
+            "height" : 480,
+            "width" : 530,
+              "use-content-width": false,
+              "use-content-height": false,
               "position-vertical-center": {},
               "position-horizontal-center": {}
             },
@@ -59,13 +63,14 @@
               },
               {
                 "type": "MigLayout",
+                "rowConstraints": "[10::20]10[10::20]10[10::20]10[10::20]10[10::20]10[10::20]10[10::20]10[10::100]10[10::20]",
                 "layoutInfo": {
-                  "use-content-width": true,
-                  "use-content-height": true,
+                  "use-content-width": false,
+                  "use-content-height": false,
                   "position-vertical-center": {},
                   "position-horizontal-center": {}
                 },
-                "rowConstraints": "[min!][10::20][10::40]",
+
                 "layoutConstraints": "wrap 1, align left",
                 "contents": [
                   {
